Fix switch style on small displays

--- a/ova/static/css/imports/switch.css
+++ b/ova/static/css/imports/switch.css
@@ -1,6 +1,7 @@
 label.switch {
   align-items: center;
   display: flex;
+  flex-shrink: 0;
   gap: .8rem;
 }
 
